<Aus> | added log monitoring

--- a/artifacts/nagios/etc/nagios/objects/remote-host.cfg
+++ b/artifacts/nagios/etc/nagios/objects/remote-host.cfg
@@ -1,3 +1,37 @@
+define contact{
+        contact_name                    david
+        use                             generic-contact
+        alias                           David Hutchful
+        email                           dhutchful@grameenfoundation.org
+        }
+
+define contact{
+        contact_name                    sanjana
+        use                             generic-contact
+        alias                           Sanjana Bayya
+        email                           sanjanb@thoughtworks.com
+        }
+define contact{
+        contact_name                    sathish
+        use                             generic-contact
+        alias                           SathisKumar Thangavel
+        email                           tsathish@thoughtworks.com
+        }
+define contact{
+        contact_name                    ausmarton
+        use                             generic-contact
+        alias                           Ausmarton Fernandes
+        email                           ausmarton@thoughtworks.com
+        }
+
+;Contact Groups
+define contactgroup{
+	contactgroup_name          motech-ghana-admins
+	alias                      Motech Ghana Admins
+	members                    ausmarton, sanjana, sathish
+}
+
+;Host config
 define host{
         use                     linux-server
         host_name               remotehost
@@ -11,7 +45,7 @@ define host{
 	notification_period	24x7
 	notification_interval	30
 	notification_options	d,r
-	contact_groups		admins
+	contact_groups		motech-ghana-admins
         }
 
 ;Sys info services
@@ -20,6 +54,7 @@ define service{
         host_name                       remotehost
         service_description             CPU Load
 	check_command			check_nrpe!check_load
+	contact_groups          	motech-ghana-admins
         }
 
 define service{
@@ -27,13 +62,15 @@ define service{
         host_name                       remotehost
         service_description             CPU Usage
         check_command                   check_nrpe!check_cpu_usage -a "25 10"
+	contact_groups          	motech-ghana-admins
         }
 
 define service{
         use                             generic-service
         host_name                       remotehost
         service_description             Memory Usage
-        check_command                   check_nrpe!check_ram -a "25 10"
+        check_command                   check_nrpe!check_ram -a "10 7"
+	contact_groups          	motech-ghana-admins
         }
 
 define service{
@@ -41,6 +78,7 @@ define service{
         host_name                       remotehost
         service_description             Disk Usage
         check_command                   check_nrpe!check_disk -a "-w 30% -c 10%"
+	contact_groups          	motech-ghana-admins
         }
 
 define service{
@@ -48,6 +86,7 @@ define service{
         host_name                       remotehost
         service_description             Users Logged In
         check_command                   check_nrpe!check_users -a "-w 25 -c 10"
+	contact_groups          	motech-ghana-admins
         }
 
 define service{
@@ -55,6 +94,7 @@ define service{
         host_name                       remotehost
         service_description             SSH
         check_command                   check_ssh!-p #SSH_PORT#
+	contact_groups          	motech-ghana-admins
         }
 
 ;App services
@@ -63,6 +103,7 @@ define service{
         host_name                       remotehost
         service_description             Apache
 	check_command			check_http!-u #GHANA_NATIONAL_WEB_URL#
+	contact_groups          	motech-ghana-admins
         }
 
 define service{
@@ -70,6 +111,7 @@ define service{
         host_name                       remotehost
         service_description             Tomcat
 	check_command			check_nrpe!check_http -a "-H 127.0.0.1 -p 8080"
+	contact_groups          	motech-ghana-admins
         }
 
 define service{
@@ -77,6 +119,7 @@ define service{
         host_name                       remotehost
         service_description             Couchdb
 	check_command			check_nrpe!check_couchdb -a "127.0.0.1"
+	contact_groups          	motech-ghana-admins
         }
 
 define service{
@@ -84,6 +127,7 @@ define service{
         host_name                       remotehost
         service_description             ActiveMQ Web Console
 	check_command			check_nrpe!check_activemq -a "127.0.0.1"
+	contact_groups          	motech-ghana-admins
         }
 
 define service{
@@ -91,6 +135,7 @@ define service{
         host_name                       remotehost
         service_description             Verboice Passenger
 	check_command			check_http!-p 3000
+	contact_groups          	motech-ghana-admins
         }
 
 define service{
@@ -98,6 +143,7 @@ define service{
         host_name                       remotehost
         service_description             MySQL
 	check_command			check_nrpe!check_mysql -a "-H 127.0.0.1 -u root -p password -d openmrs_test"
+	contact_groups          	motech-ghana-admins
         }
 
 define service{
@@ -105,6 +151,7 @@ define service{
         host_name                       remotehost
         service_description             Asterisk
 	check_command			check_sip!"sip:100@41.191.245.66"!5060
+	contact_groups          	motech-ghana-admins
         }
 ;Diagonostic
 define service{
@@ -112,6 +159,7 @@ define service{
         host_name                       remotehost
         service_description             Ghana National Web
 	check_command			check_http!-u #GHANA_NATIONAL_WEB_URL#
+	contact_groups          	motech-ghana-admins
         }
 
 define service{
@@ -119,6 +167,39 @@ define service{
         host_name                       remotehost
         service_description             OpenMRS
 	check_command			check_http!-u /openmrs/
+	contact_groups          	motech-ghana-admins
+        }
+;Logs
+define service{
+        use                             generic-service
+        host_name                       remotehost
+        service_description             Apache Logs
+        check_command                   check_nrpe!check_log -a "-F /var/log/httpd/error_log -O /tmp/httpd_error_log"
+        contact_groups                  motech-ghana-admins
+        }
+
+define service{
+        use                             generic-service
+        host_name                       remotehost
+        service_description             Mysql Logs
+        check_command                   check_nrpe!check_log -a "-F /var/log/mysql_error.txt -O /tmp/mysql_error_log"
+        contact_groups                  motech-ghana-admins
+        }
+
+define service{
+        use                             generic-service
+        host_name                       remotehost
+        service_description             Asterisk Logs
+        check_command                   check_nrpe!check_log -a "-F /var/log/asterisk/messages -O /tmp/asterisk_log"
+        contact_groups                  motech-ghana-admins
+        }
+
+define service{
+        use                             generic-service
+        host_name                       remotehost
+        service_description             CouchDB Logs
+        check_command                   check_nrpe!check_log -a "-F /var/log/couchdb/couch.log -O /tmp/couch_log"
+        contact_groups                  motech-ghana-admins
         }
 
 ;Groups
