<Aus> | mysql and ghana.log monitoring

--- a/artifacts/nagios/etc/nagios/objects/remote-host.cfg
+++ b/artifacts/nagios/etc/nagios/objects/remote-host.cfg
@@ -182,7 +182,7 @@ define service{
         use                             generic-service
         host_name                       remotehost
         service_description             Mysql Logs
-        check_command                   check_nrpe!check_log -a "-F /var/log/mysql_error.txt -O /tmp/mysql_error_log"
+        check_command                   check_nrpe!check_log -a "-F /var/log/mysql_error.txt -O /tmp/mysqld.log"
         contact_groups                  motech-ghana-admins
         }
 
@@ -199,6 +199,14 @@ define service{
         host_name                       remotehost
         service_description             CouchDB Logs
         check_command                   check_nrpe!check_log -a "-F /var/log/couchdb/couch.log -O /tmp/couch_log"
+        contact_groups                  motech-ghana-admins
+        }
+
+define service{
+        use                             generic-service
+        host_name                       remotehost
+        service_description             Ghana Logs
+        check_command                   check_nrpe!check_log -a "-F /home/motech/motech-logs/ghana.log -O /tmp/ghana_log"
         contact_groups                  motech-ghana-admins
         }
 
