<aus> | added query for 'error' in logs for nagios

--- a/artifacts/nagios/etc/nagios/objects/remote-host.cfg
+++ b/artifacts/nagios/etc/nagios/objects/remote-host.cfg
@@ -174,7 +174,7 @@ define service{
         use                             generic-service
         host_name                       remotehost
         service_description             Apache Logs
-        check_command                   check_nrpe!check_log -a "-F /var/log/httpd/error_log -O /tmp/httpd_error_log"
+        check_command                   check_nrpe!check_log -a "-F /var/log/httpd/error_log -O /tmp/httpd_error_log -q error"
         contact_groups                  motech-ghana-admins
         }
 
@@ -182,7 +182,7 @@ define service{
         use                             generic-service
         host_name                       remotehost
         service_description             Mysql Logs
-        check_command                   check_nrpe!check_log -a "-F /var/log/mysql_error.txt -O /tmp/mysqld.log"
+        check_command                   check_nrpe!check_log -a "-F /var/log/mysql_error.txt -O /tmp/mysqld.log -q Error"
         contact_groups                  motech-ghana-admins
         }
 
@@ -190,7 +190,7 @@ define service{
         use                             generic-service
         host_name                       remotehost
         service_description             Asterisk Logs
-        check_command                   check_nrpe!check_log -a "-F /var/log/asterisk/messages -O /tmp/asterisk_log"
+        check_command                   check_nrpe!check_log -a "-F /var/log/asterisk/messages -O /tmp/asterisk_log -q ERROR"
         contact_groups                  motech-ghana-admins
         }
 
@@ -198,7 +198,7 @@ define service{
         use                             generic-service
         host_name                       remotehost
         service_description             CouchDB Logs
-        check_command                   check_nrpe!check_log -a "-F /var/log/couchdb/couch.log -O /tmp/couch_log"
+        check_command                   check_nrpe!check_log -a "-F /var/log/couchdb/couch.log -O /tmp/couch_log -q error"
         contact_groups                  motech-ghana-admins
         }
 
@@ -206,7 +206,7 @@ define service{
         use                             generic-service
         host_name                       remotehost
         service_description             Ghana Logs
-        check_command                   check_nrpe!check_log -a "-F /home/motech/motech-logs/ghana.log -O /tmp/ghana_log"
+        check_command                   check_nrpe!check_log -a "-F /home/motech/motech-logs/ghana.log -O /tmp/ghana_log -q ERROR"
         contact_groups                  motech-ghana-admins
         }
 
