--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ downloads/
 ./artifacts/properties/prod/deploy.properties
 ./artifacts/properties/qa/deploy.properties
 ./artifacts/properties/uat/deploy.properties
+./artifacts/properties/showcase/deploy.properties
